# TaxAgent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT.md  README.md  STRATEGY.md  caclub_results.json  caclub_search.json  casemine.json  casemine_cookies.txt  casemine_judgements.py  docker-compose.yml  dom.json  dynamic.json  ex.py  graph_api.py  indiankanoon.json  indiankanoon_search.json  main.py  out.json  payload.json  pyproject.toml  requirements.txt  start_adk_servers.sh  start_agents.sh  supervisor.conf  taxkanoon_sections.py  taxprofblog.json  taxprofblog_search.json  taxtmi.json  taxtmi_results.json  taxtmi_search.json  turbotax.json  turbotax_search.json
Taxclarity/: .env.example  .gitignore  .pids  Dockerfile  Procfile  README.md  config.py  conftest.py  nginx.conf  pyproject.toml  requirements.txt  run.sh  start_adk_servers.sh  start_servers.ps1  stop.sh
Taxclarity/New_vertex/: agent.py  config.py  doc_2026-03-13_12-03-32.env  graph_api.py  live_orchestrator.py  memory_bank.py  session_state.py  vertex_memory_bank.py  websocket_server.py
Taxclarity/agents/: caclub_agent.py  calculation_agent.py  contradiction_agent.py  taxprofblog_agent.py  taxtmi_agent.py  turbotax_agent.py
Taxclarity/backend/: bot.py  document_extractor.py  errors.py  graph_api.py  health.py  live_orchestrator.py  memory_bank.py  obsidian_graph.py  session_state.py  websocket_server.py
Taxclarity/data/: caclub_cache_06efa9c786ba0547d1772a53d749616b7a9ca173425f0f2182445a6759e2168e.json  caclub_cache_0bd953cf3969a15d22e703de92d9a0c54a34ca26d135ee8c2e522641634ca990.json  (+27 more)
(+209 files in other folders)
