[project]
name = "taxagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "google-adk[a2a]>=1.26.0",
    "parsel>=1.11.0",
    "praw>=7.8.1",
    "requests>=2.32.5",
    "scrapling[fetchers]>=0.4.1",
]
